objects/AcctSeedERP__Sales_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>Tax_Category__c</fullName>
        <description>choose the category of the requisition- Tax will be based upon this choice</description>
        <inlineHelpText>choose the category of the requisition- Tax will be based upon this choice.   Need to match O&amp;M Tax Category list on APL and BL</inlineHelpText>
        <label>Tax Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cell Modem Data Plan</fullName>
                </value>
                <value>
                    <fullName>Data Storage</fullName>
                </value>
                <value>
                    <fullName>Delivery Charge</fullName>
                    <isActive>false</isActive>
                    <label>Delivery Charge Equip Rental/Lease</label>
                </value>
                <value>
                    <fullName>Drive Time/Travel - Internal</fullName>
                </value>
                <value>
                    <fullName>Drive Time/Travel - Sub-C</fullName>
                </value>
                <value>
                    <fullName>Electronic Output</fullName>
                </value>
                <value>
                    <fullName>Engineering Services</fullName>
                </value>
                <value>
                    <fullName>Environmental Charge</fullName>
                    <isActive>false</isActive>
                    <label>Environmental Charge</label>
                </value>
                <value>
                    <fullName>Environmental Fee Equip Rental/Lease</fullName>
                    <isActive>false</isActive>
                    <label>Environmental Fee Equip Rental/Lease</label>
                </value>
                <value>
                    <fullName>Equipment Rental/Leases</fullName>
                </value>
                <value>
                    <fullName>Fees, Property Taxes, Permits</fullName>
                    <isActive>false</isActive>
                    <label>Fees, Property Taxes, Permits</label>
                </value>
                <value>
                    <fullName>Freight</fullName>
                    <isActive>false</isActive>
                    <label>Freight</label>
                </value>
                <value>
                    <fullName>Handling</fullName>
                    <isActive>false</isActive>
                    <label>Handling</label>
                </value>
                <value>
                    <fullName>Hotels</fullName>
                    <isActive>false</isActive>
                    <label>Hotels</label>
                </value>
                <value>
                    <fullName>Insulation Testing</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Labor - Internal</fullName>
                </value>
                <value>
                    <fullName>Labor - Sub-C</fullName>
                </value>
                <value>
                    <fullName>Meals</fullName>
                    <isActive>false</isActive>
                    <label>Meals</label>
                </value>
                <value>
                    <fullName>Mileage</fullName>
                    <isActive>false</isActive>
                    <label>Mileage</label>
                </value>
                <value>
                    <fullName>Module Washing</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <isActive>false</isActive>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>Optional Extended Warranties</fullName>
                </value>
                <value>
                    <fullName>Parts/Material</fullName>
                </value>
                <value>
                    <fullName>PeGu</fullName>
                </value>
                <value>
                    <fullName>Pickup Charge</fullName>
                    <isActive>false</isActive>
                    <label>Pickup Charge</label>
                </value>
                <value>
                    <fullName>Equipment_RentalLeases</fullName>
                    <isActive>false</isActive>
                    <label>Pickup Equipment Rental/Leases</label>
                </value>
                <value>
                    <fullName>Reimbursable Expenses</fullName>
                </value>
                <value>
                    <fullName>S&amp;H</fullName>
                </value>
                <value>
                    <fullName>Sales Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Tax Group the project is in- determines the default tax rate on the req</inlineHelpText>
        <label>Tax Group</label>
        <referenceTo>Tax_Group__c</referenceTo>
        <relationshipLabel>Construction Requisitions</relationshipLabel>
        <relationshipName>Construction_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Spent_Req__c</fullName>
        <formula>AcctSeedERP__Project__r.POCO_Total__c + SOLine_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spent + Req</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Reporting for Service Reqs- notes what type of cost the req should be categorized under</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Charge Back</fullName>
                </value>
                <value>
                    <fullName>Warranty- Resi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <inlineHelpText>This is a editable unit cost to be the POLine unit cost.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who to contact at the Vendor listed regarding the purchase
Must be a Contact in Salesforce</inlineHelpText>
        <label>Vendor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Construction Requisitions</relationshipLabel>
        <relationshipName>Construction_Requisitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Description_SOL__c</fullName>
        <inlineHelpText>Will pull through to the PO Line, prints on the PO</inlineHelpText>
        <label>Vendor Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Subcontractor or Material vendor
Must be listed as a Vendor Account in Salesforce</inlineHelpText>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Type__c</field>
                <operation>equals</operation>
                <value>Vendor, Customer and Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Type__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Active__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.CreatedDate</field>
                <operation>lessThan</operation>
                <valueField>Account.LastModifiedDate</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Order Line (Vendor)</relationshipLabel>
        <relationshipName>Sales_Order_Line1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Watts__c</fullName>
        <formula>AcctSeedERP__Product__r.Watts_STC__c * AcctSeedERP__Quantity_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Only used for module orders</inlineHelpText>
        <label>Watts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Sales Order Line</relationshipLabel>
        <relationshipName>Sales_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Order Line</label>
    <listViews>
        <fullName>Fulfill_PO</fullName>
        <columns>Con_Req_Group__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>AcctSeedERP__Project__c</columns>
        <columns>Vendor__c</columns>
        <columns>AcctSeedERP__Product__c</columns>
        <columns>AcctSeedERP__Project_Task__c</columns>
        <columns>SOLine_Total__c</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>AcctSeedERP__Purchase_Order_Line__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>2/1/2013 12:00 AM</value>
        </filters>
        <label>Fulfill PO</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Construction_Requisitions</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>AcctSeedERP__Project__c</columns>
        <columns>Status__c</columns>
        <columns>AcctSeedERP__Project_Task__c</columns>
        <columns>Ok_to_Submit__c</columns>
        <columns>AcctSeedERP__Product__c</columns>
        <columns>SOLine_Total__c</columns>
        <columns>Con_Req_Group__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Con_Req_Group__c</field>
            <operation>equals</operation>
            <value>Keith Mitchell</value>
        </filters>
        <label>My Construction Requisitions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>O_M_Service_POs_to_fulfill</fullName>
        <columns>Record_Type__c</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>AcctSeedERP__Project__c</columns>
        <columns>Site__c</columns>
        <columns>Vendor__c</columns>
        <columns>SOLine_Total__c</columns>
        <columns>Service_Visit__c</columns>
        <columns>AcctSeedERP__Project_Task__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:720</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>AcctSeedERP__Purchase_Order_Line__c</field>
            <operation>notContain</operation>
            <value>pol,purchase</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>AcctSeedERP__Sales_Order_Line__c.Service</value>
        </filters>
        <label>O&amp;M Service POs to fulfill</label>
        <language>en_US</language>
        <sharedTo>
            <group>Accounting_O_M</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Patty_s_Upload</fullName>
        <columns>Record_Type__c</columns>
        <columns>Type__c</columns>
        <columns>AcctSeedERP__Project__c</columns>
        <columns>NAME</columns>
        <columns>AcctSeedERP__Project_Task__c</columns>
        <columns>AcctSeedERP__Product__c</columns>
        <columns>Service_Visit__c</columns>
        <columns>Status__c</columns>
        <columns>Unit_Cost__c</columns>
        <columns>Vendor__c</columns>
        <columns>Vendor_Contact__c</columns>
        <columns>AcctSeedERP__Quantity_Ordered__c</columns>
        <columns>Requested_Delivery_Date__c</columns>
        <columns>Additional_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Vendor__c</field>
            <operation>contains</operation>
            <value>Shine Up Solar</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>pryde</value>
        </filters>
        <label>Patty&apos;s Upload</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <nameField>
        <displayFormat>SOL-{00000}</displayFormat>
        <label>Sales Order Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Line</pluralLabel>
    <recordTypes>
        <fullName>Major_Component</fullName>
        <active>true</active>
        <description>For requesting Modules, Inverters, and Racking</description>
        <label>Major Component</label>
    </recordTypes>
    <recordTypes>
        <fullName>Minor_Component</fullName>
        <active>true</active>
        <description>For requesting minor component material (including DAS)</description>
        <label>Minor Component</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Costs</fullName>
        <active>true</active>
        <description>For non-material costs (Permits, Other Costs, Bonds, etc)</description>
        <label>Other Costs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <description>For Service Construction Requisitions</description>
        <label>Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subcontractor</fullName>
        <active>true</active>
        <description>For requesting subcontractors</description>
        <label>Subcontractor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AcctSeedERP__Allocated_Greater_Equal_Shipped</fullName>
        <active>true</active>
        <description>Ensures the quantity allocated is always greater than or equal to the quantity shipped</description>
        <errorConditionFormula>AcctSeedERP__Quantity_Shipped__c &gt;  AcctSeedERP__Quantity_Allocated__c</errorConditionFormula>
        <errorMessage>The quantity shipped cannot be more than the quantity allocated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Both_Purchasing_And_Manufacturing</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(AcctSeedERP__Manufacturing_Order__c) ),  NOT(ISBLANK(AcctSeedERP__Purchase_Order_Line__c )))</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Product__c</errorDisplayField>
        <errorMessage>A product can not be on back order as a manufactured item and a purchased item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Ordered_Greater_Equal_Allocated</fullName>
        <active>true</active>
        <description>the quantity ordered is greater than or equal to the quantity allocated</description>
        <errorConditionFormula>AcctSeedERP__Quantity_Allocated__c &gt; AcctSeedERP__Quantity_Ordered__c</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Quantity_Ordered__c</errorDisplayField>
        <errorMessage>The quantity ordered cannot be less than the quantity allocated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Product_Is_Required</fullName>
        <active>true</active>
        <description>product is required</description>
        <errorConditionFormula>ISBLANK(AcctSeedERP__Product__c)</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Product__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Project_Task_Required_With_Project</fullName>
        <active>true</active>
        <description>Rule ensures a Project Task is Required if the Project field is used.</description>
        <errorConditionFormula>NOT(ISBLANK(AcctSeedERP__Project__c)) &amp;&amp; ISBLANK(AcctSeedERP__Project_Task__c)</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Project_Task__c</errorDisplayField>
        <errorMessage>A Project Task is required if a Project is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Quantity_Is_Positive</fullName>
        <active>true</active>
        <description>quantity must be greater than or equal to 0</description>
        <errorConditionFormula>AcctSeedERP__Quantity_Ordered__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Quantity_Ordered__c</errorDisplayField>
        <errorMessage>quantity must be greater than or equal to 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Budget_Line_Item_Lookup</fullName>
        <active>true</active>
        <errorConditionFormula>AcctSeedERP__Project_Task__r.RecordTypeId &lt;&gt;&quot;012800000007gu8&quot;</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Project_Task__c</errorDisplayField>
        <errorMessage>Please select a Line Item with Record Type= Budget Line Item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CRG_required</fullName>
        <active>false</active>
        <description>CRG is required for all Con Reqs except Service</description>
        <errorConditionFormula>AND( RecordType.DeveloperName &lt;&gt; &quot;Service&quot;,  ISBLANK(Con_Req_Group__c ))</errorConditionFormula>
        <errorDisplayField>Con_Req_Group__c</errorDisplayField>
        <errorMessage>All Construction Requisitions must be part of a Con Req Group. Please create the Con Req Group first, or associate this req to a CRG.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Expired_or_Complete</fullName>
        <active>false</active>
        <description>To avoid O&amp;M personnel to create reqs for projects that are not under contract anymore.</description>
        <errorConditionFormula>AND(
OR(Service_Visit__r.Contract_Status__c = &quot;Expired&quot;,
Service_Visit__r.Contract_Status__c = &quot;Paid Contract Complete&quot;),

 
 RecordTypeId = &quot;012800000007hO9&quot;,
 ISNEW() )</errorConditionFormula>
        <errorMessage>Contract associated with Con Req is either Expired or Paid Contract Complete. Please contact your O&amp;M administrator.   Only the Warranty Manager can create these types of CRG&apos;s.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Correct_Products_for_Con_Reqs</fullName>
        <active>false</active>
        <description>only certain products can be chosen for Major, Minor, Sub, other reqs</description>
        <errorConditionFormula>AND( 
RecordType.Name = &quot;Major Component&quot;, 
OR( 
(ISPICKVAL(AcctSeedERP__Product__r.Family, &quot;Data Monitoring&quot;)), 
(ISPICKVAL(AcctSeedERP__Product__r.Family, &quot;Installation Services&quot;)), 
(ISPICKVAL(AcctSeedERP__Product__r.Family, &quot;Labor and Service&quot;)), 
(ISPICKVAL(AcctSeedERP__Product__r.Family, &quot;Warranty&quot;)), 
(ISPICKVAL(AcctSeedERP__Product__r.Family, &quot;Discounts&quot;)), 
(ISPICKVAL(AcctSeedERP__Product__r.Family, &quot;DO NOT USE&quot;)) 
,(ISPICKVAL(AcctSeedERP__Product__r.Family, &quot;Combiner&quot;)), 
NOT((BEGINS(TEXT(AcctSeedERP__Product__r.Family), &quot;Misc- Transformers&quot;))),
(BEGINS(TEXT(AcctSeedERP__Product__r.Family), &quot;Misc-&quot;))) 
)</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Product__c</errorDisplayField>
        <errorMessage>Only Racking, Modules, and Inverters can be entered for a Major Component Requisition</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Line_Item_cannot_be_Warranty_if_Billable</fullName>
        <active>true</active>
        <description>for Service REQ&apos;s where Line Item is Warranty OM, the Type cannot be billable.</description>
        <errorConditionFormula>ISNEW()&amp;&amp; RecordType.Id =  &quot;012800000007hO9&quot;  &amp;&amp;  ISPICKVAL(Type__c, &quot;Billable&quot;)  &amp;&amp; AcctSeedERP__Project_Task__r.Name  = &quot;Warranty&quot;</errorConditionFormula>
        <errorMessage>You cannot use Warranty as a Line Item for Billable Requisitions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Racking_Watts_Required_if_Racking_CR</fullName>
        <active>true</active>
        <errorConditionFormula>AND( (OR(ISPICKVAL( Approval_Status__c ,&quot;New&quot;),  ISPICKVAL( Approval_Status__c ,&quot;&quot;))), AcctSeedERP__Project_Task__r.Name  =&quot;Racking - Materials&quot;,  ISBLANK(Racking_Watts__c ))</errorConditionFormula>
        <errorDisplayField>Racking_Watts__c</errorDisplayField>
        <errorMessage>Please enter the number of watts that will be installed on the racking</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Order_Project_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; AcctSeedERP__Project__c  !=  AcctSeedERP__Sales_Order__r.Project__c</errorConditionFormula>
        <errorMessage>Please select a sales order related to the selected Sales Order Line project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Req_Locked_No_Edit</fullName>
        <active>true</active>
        <description>If Service Req is approved and locked, no edits except Accounting</description>
        <errorConditionFormula>AND( Locked__c,  RecordType.Name =&quot;Service&quot;,  $User.LastName &lt;&gt;&quot;Reas&quot;,OR(ISCHANGED ( Vendor__c ), ISCHANGED( Vendor_Contact__c ), ISCHANGED( AcctSeedERP__Product__c ), ISCHANGED( Unit_Cost__c ), ISCHANGED( AcctSeedERP__Quantity_Ordered__c ), ISCHANGED( AcctSeedERP__Project_Task__c ), ISCHANGED( Service_Visit__c )))</errorConditionFormula>
        <errorMessage>You cannot edit the Service Requisition after its been approved.</errorMessage>
    </validationRules>
</CustomObject>